<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host_url"
        android:text="@string/host_url_value"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfigure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure"
        app:layout_constraintTop_toBottomOf="@+id/editUrl" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/userid"
        app:layout_constraintTop_toBottomOf="@+id/btnConfigure" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/editUserId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetDocuments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_documents"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetAcceptedDocuments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_accepted_documents"
        app:layout_constraintTop_toBottomOf="@+id/btnGetDocuments" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>